make the menubar visible and fix horizental line issues in phone responsiv

--- a/src/index.css
+++ b/src/index.css
@@ -27,4 +27,8 @@ html.dark {
 html {
   scroll-behavior: smooth;
 }
+html, body {
+  overflow-x: hidden;
+}
+
 
